--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,18 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>com.asana</groupId>
 				<artifactId>asana</artifactId>
-				<version>0.6.0</version>
+				<version>0.6.0-JANE</version>
 			</dependency>
 			<dependency>
 				<groupId>com.amazonaws</groupId>
